--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Projeto infoPizza - Sistema de Gerenciamento de Pizzarias.
+# **Projeto infoPizza - Sistema de Gerenciamento de Pizzarias.**
 
 Bruno Nogueira - RA: 18001521
 João Paulo - RA: 18002241
